<resources>
    <string name="app_name">二次源</string>

    <string name="str_user_hint">用户名/手机号</string>
    <string name="str_pass_hint">密码</string>

    <string name="str_login">登录</string>
    <string name="str_login_error">忘记密码？</string>

    <string name="str_apply">申请注册</string>
    <string name="str_login_other">社交账号登录</string>

    <string name="str_register">注册</string>
    <string name="str_found_pass">找回密码</string>

    <string name="str_input_phone">输入手机号</string>
    <string name="str_input_verify">输入验证码</string>

    <string name="str_set_pass">设置密码</string>
    <string name="str_input_pass">输入密码</string>
    <string name="str_confirm_pass">确认密码</string>

    <string name="str_get_verify">获取验证码</string>
    <string name="str_verify">验证</string>
    <string name="str_confirm">确认</string>

    <string name="str_input_user">输入用户名</string>

    <string name="str_publish_goods">发布商品</string>
    <string name="str_publish">发布</string>
    <string name="str_goods_title">商品主题</string>
    <string name="str_goods_desc">商品描述</string>
    <string name="str_goods_price">商品价格</string>
    <string name="str_goods_kind">商品分类</string>
    <string name="str_goods_condition">新旧程度</string>
    <string name="str_goods_mount">商品数量</string>
    <string name="str_goods_phone">联系方式</string>
    <string name="str_goods_location">位置</string>

    <string name="str_popup_window_text">请选择</string>
    <string name="str_popup_window_button1">拍照</string>
    <string name="str_popup_window_button2">从相册中选取</string>

    <string name="str_file">文件夹</string>
    <string name="str_album">相册</string>
    <string name="str_album_text">相册没有图片</string>
    <string name="str_album_more">超出可选图片张数</string>

    <string name="str_finish">完成</string>
    <string name="str_all_kind_text">所有分类</string>

    <string name="str_all_kind">全部分类</string>
    <string name="str_sub_kind">o(≧v≦)o</string>
    <string name="str_user_name">君の名字</string>

    <string name="str_detail_text">图文详情</string>
    <string name="str_detail_goods_mount">数量：</string>
    <string name="str_detail_goods_location">位置：</string>
    <string name="str_detail_goods_condition">品质：</string>
    <string name="str_detail_goods_desc">商品描述：</string>

    <string name="str_search">搜索</string>
    <string name="str_search_history">搜索历史</string>
    <string name="str_search_result">搜索结果</string>
    <string name="str_history_text">二次源搜索</string>

    <string name="str_setting_text">设置</string>
    <string name="str_about_me">关于开发者</string>
    <string name="str_about_app">关于二次源</string>
    <string name="str_modify_pass">修改密码</string>
    <string name="str_clear_cache">清理缓存</string>
    <string name="str_feedback">反馈</string>
    <string name="str_share">分享</string>
    <string name="str_logout">退出登录</string>
    <string name="str_my_desc">一枚码农</string>
    <string name="str_version">1.0</string>
    <string name="str_introduce">「二次源」</string>
    <string name="str_input_old_pass">输入旧密码</string>
    <string name="str_input_new_pass">输入新密码</string>
    <string name="str_contact">联系方式（选填）</string>
    <string name="str_content">反馈内容（必填）</string>
    <string name="str_submit">提交反馈</string>
    <string name="str_share_title">分享二次源至</string>

    <string name="str_home">首页</string>
    <string name="str_tool">常用工具</string>

    <string name="str_address">正在定位...</string>

    <string name="str_search_text">请输入关键字</string>

    <string name="str_self">我的</string>
    <string name="str_signature">签名空空如也，设置一个？</string>
    <string name="str_no_login">还没有登录哦</string>
    <string name="str_login_now">立即登录</string>
    <string name="str_my_publish">我的发布</string>
    <string name="str_my_collect">我的收藏</string>
    <string name="str_my_cart">我的求购</string>

    <string name="str_manager">管理</string>
    <string name="str_cancel">取消</string>
    <string name="str_delete">删除</string>
    <string name="str_cancel_collect">取消收藏</string>
    <string name="str_cancel_cart">取消求购</string>
    <string name="str_no_publish">暂无发布任何商品</string>
    <string name="str_no_collect">暂无收藏任何商品</string>
    <string name="str_no_cart">暂无求购任何商品</string>

    <string name="str_profile">个人资料</string>
    <string name="str_avatar">头像</string>
    <string name="str_name">昵称</string>
    <string name="str_sex">性别</string>
    <string name="str_age">年龄</string>
    <string name="str_sign">签名</string>

    <string name="str_app_desc">
        软件介绍：
        \n------二次源是啥呢？------
        \n嗯~简单来说，就是开发者的毕业设计
        \n作为一个校园二手交易App，在设计与功能方面，目前尚有许多不足(*^__^*)……
        \n\n后续将会增加一些常用功能入口，重新设计界面，完善分享、支付功能，敬请期待！！！
    </string>
</resources>
