<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/common_layout">

    <RelativeLayout
        style="@style/common_top">
        <ImageView
            style="@style/common_back"
            android:id="@+id/feedback_back" />
        <TextView
            style="@style/common_title"
            android:text="@string/str_feedback" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="2dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorWhite">
        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:hint="@string/str_contact"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:background="@null"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="2dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/colorWhite">
        <EditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:gravity="left|top"
            android:hint="@string/str_content"
            android:background="@null"/>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/str_submit"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_selector" />
</LinearLayout>