<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/transparent">

    <LinearLayout
        android:id="@+id/popup_window"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_corner">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/str_popup_window_text"
            android:textSize="20sp"
            android:textColor="@color/popupWindowButtonText" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorGray" />
        <Button
            android:id="@+id/popup_window_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_popup_window_button1"
            android:textSize="16sp"
            android:textColor="@color/popupWindowButtonText"
            android:background="@drawable/button_no_bg" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/popupWindowTextView" />
        <Button
            android:id="@+id/popup_window_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_popup_window_button2"
            android:textSize="16sp"
            android:textColor="@color/popupWindowButtonText"
            android:background="@drawable/button_no_bg" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/popupWindowTextView" />
        <Button
            android:id="@+id/popup_window_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/str_cancel"
            android:textSize="16sp"
            android:textColor="@color/popupWindowButtonText"
            android:background="@drawable/button_no_bg" />
    </LinearLayout>
</RelativeLayout>